2004-11-24  John BouAntoun <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: Add TitleMonth ContextMenu handling

2004-11-24  John BouAntoun <jba-mono@optusnet.com.au>

	* ContainerControl.cs: correct accidental check in of local changes

2004-11-24  John BouAntoun <jba-mono@optusnet.com.au>

	* ThemeWin32Classic.cs: 
		- Fixed Drawing Last month in grid (sometimes not showing)
	* MonthCalendar.cs:
		- Fixed title width calculation bug (makeing title small)

2004-11-23  Peter Bartok <pbartok@novell.com>

	* XplatUIX11.cs: 
	  - Added generation of WM_MOUSEHOVER event
	  - Added missing assignment of async_method atom
	  - Fixed WM_ERASEBKGND; now only redraws the exposed area

2004-11-23  John BouAntoun <jba-mono@optusnet.com.au>

	* ThemeWin32Classic.cs: 
		- Fixed Drawing of today circle when showtodaycircle not set
		- fixed drawing of first and last month in the grid (gay dates)
	* MonthCalendar.cs:
		- Fixed Drawing of today circle
		- Fixed drawing of grady dates
		- Fixed HitTest for today link when ShowToday set to false
		- Fixed DefaultSize to obey ShowToday

2004-11-23  John BouAntoun <jba-mono@optusnet.com.au>

	* ThemeWin32Classic.cs: Fixed DrawMonthCalendar and private support methods
	* System.Windows.Forms/Theme.cs
	* MonthCalendar.cs: added for MonthCalendar
	* SelectionRange.cs: added for MonthCalendar
	* Day.cs: added for MonthCalendar: added for MonthCalendar
	* DateRangeEventArgs.cs: added for MonthCalendar
	* DateRangeEventHandler.cs: added for MonthCalendar

2004-11-22  Ravindra <rkumar@novell.com>

	* ThemeWin32Classic.cs: Fixed ListViewDrawing with 'UseItemStyleForSubItems'
	property.

2004-11-22  Miguel de Icaza  <miguel@ximian.com>

	* UpDownBase.cs (InitTimer): Use prehistoric C# 1.0 notation for
	event handler.
	
	* NumericUpDown.cs: Added new implementation.
	* UpDownBase.cs: Added new implementation.

	* XplatUIWin32.cs (KeyboardSpeed, KeyboardDelay): added default
	implementations. 
	